--- a/index.html
+++ b/index.html
@@ -5,93 +5,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
 <body>
+
+
     <header>
-        <div class="">
-            <div class="row">
-                <div class="col-md-12 ">
-                    <div class="d-flex flex-row noticia-header noticia d-none d-lg-block"
-                        style="overflow-x: auto; white-space: nowrap;">
-                        <span class="text-body-secondary" style="font-size: smaller;">
-                            <span class="fw-bold">Es noticia:</span>
-                            <a>América vs Chivas</a> /
-                            <a>Delfina Gomez</a> /
-                            <a>Cruz Azul vs Chivas</a> /
-                            <a>Necaxa vs Tigres</a> /
-                            <a>Boxing</a> /
-                            <a>Gaming</a> /
-                            <a>Alineaciones América</a> /
-                            <a>Lo úiltimo en deporte</a> /
-                            <a>Chismes</a> /
-                            <a>Simulacro Nacional 2023</a> /
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <div class="container header-blanco">
-                <div class="links-header">
-                    <div class="row">
-                        <div class="col-6 d-flex align-items-center">
-                            <a class="text-decoration" href="#" style="color:black">
-                                <img src="img/radioMarca.png" alt="Logo" style="width: 2rem"
-                                    class="d-inline-block align-text-center">
-                                Radio Marca
-                            </a>
-                            <hr style="margin: 0 1% 0 1%;  border: 0.8px solid black; height: 80%;">
-                            <a class="text-decoration" href="#" style="color:black">
-                                <img src="img/cuidatePlus.jpg" alt="Logo" style="width: 2rem"
-                                    style="border-radius: 50%;" class="d-inline-block align-text-center">
-                                CuídatePlus
-                            </a>
-                            <hr style="margin: 0 1% 0 1%;  border: 0.8px solid black; height: 80%;">
-                            <a class="text-decoration" href="#" style="color:black">
-                                <img src="img/trending.PNG" alt="Logo" style="width: 2rem"
-                                    class="d-inline-block align-text-center">
-                                Lo + trending
-                            </a>
-                        </div class="justify-content-center">
-                        <div class="col-  logo-marca" style="width: 150px;">
-                            <a class="" href="index.html">
-                                <img src="img/MARCA.PNG" alt="Bootstrap" style="width: 11rem">
-                            </a>
+        <div style="background-color: #F7F7F7">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="d-flex flex-row" style="overflow-x: auto; white-space: nowrap;">
+                            <span class="text-body-secondary" style="font-size: 11px;">
+                                <span class="fw-bold">Es noticia:</span>
+                                <a href="#" class="text-decoration-none text-dark">América vs Atlas</a> /
+                                <a href="#" class="text-decoration-none text-dark">Canelo</a> /
+                                <a href="#" class="text-decoration-none text-dark">Cruz Azul vs Chivas</a> /
+                                <a href="#" class="text-decoration-none text-dark">Necaxa vs Tigres</a> /
+                                <a href="#" class="text-decoration-none text-dark">Boxing</a> /
+                                <a href="#" class="text-decoration-none text-dark">Gaming</a> /
+                                <a href="#" class="text-decoration-none text-dark">Alineaciones América</a> /
+                                <a href="#" class="text-decoration-none text-dark">Lo úiltimo en deporte</a> /
+                                <a href="#" class="text-decoration-none text-dark">Chismes</a> /
+                                <a href="#" class="text-decoration-none text-dark">Simulacro Nacional 2023</a> /
+                                <a href="#" class="text-decoration-none text-dark">Dallas vs New York</a> /   
+                                <a href="#" class="text-decoration-none text-dark">Chivas vs Tigres</a> /   
+                            </span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
-        <!-- <div class="col-3 mt-2 mb-2">
-                <div class="col-3 d-flex align-items-center fw-semibold" style="font-size: smaller;">
-                    <img src="E:\Escritorio\Practicas PM\Practica-B4marca.com\img\1200px-RadioMARCA.svg.png"
-                        style="width: 3rem" />
-                    <a href="https://www.marca.com/radio.html?intcmp=BOTONPORTADA&s_kw=radiomarca" target="_blank"
-                        class="d-inline-block align-text-center">
-                        Radio MARCA
-                    </a>
-                    <img src="E:\Escritorio\Practicas PM\Practica-B4marca.com\img\1sITgoTL_400x400.jpg"
-                        class="img-fluid m-1 d-none d-lg-block " style="width: 3rem;" />
-                    <a href="https://cuidateplus.marca.com/" target="_blank" class="link d-none d-lg-block">
-                        CuídatePlus
-                    </a>
-                    <img src="./assets/img/svg/lo+trending-logo.png" class="img-fluid m-1 d-none d-lg-block"
-                        style="width: 3rem;" />
-                    <a href="https://www.marca.com/mx/trending.html" target="_blank" class="link d-none d-lg-block">
-                        Lo + Trending
-                    </a>
+        <div class="row">
+            <div class="col-md-12">
+                <div style="padding: 0% 11% 0% 11%;" class="mt-1 mb-1 list-group list-group-horizontal">
+                    <div class=" d-flex align-items-center fw-bold text me-3" style="font-size: 11px;">
+                        <img src="./img/radiomarca.png" alt="Logo Radio MARCA"
+                          class="img-fluid m-1 d-none d-lg-block" style="width: 1.9rem;" />
+                        <span class="d-none d-lg-block">Radio MARCA</span>
+                    </div>
+                    <div class="border"></div>
+                    <div class="d-flex align-items-center fw-bold text me-3" style="font-size: 11px">
+                        <img src="https://statics-cuidateplus.marca.com/cms/favicon_0_0.ico" alt="Logo cuídate plus"
+                          class="img-fluid m-1 d-none d-lg-block" style="width: 1.9rem;" />
+                        <span class="d-none d-lg-block">Cuídate plus</span>
+                    </div>
+                    <div class="border"></div>
+                    <div class="d-flex align-items-center fw-bold text me-3" style="font-size: 11px">
+                        <img src="./img/lo_mas.jpeg" alt="Logo lo + trending"
+                          class="img-fluid m-1 d-none d-lg-block" style="width: 1.9rem;"  />
+                        <span class="d-none d-lg-block">Lo + trending</span>
+                    </div>
+                    <div class="d-flex align-items-center fw-bold text me-3" style="font-size: 11px; padding-left: 12%;">
+                        <img src="./img/marca_logo_grande.png" alt="Logo lo + trending"
+                          class="img-fluid m-1 d-none d-lg-block" style="width: 9rem;" />
+                    </div>
+                    <div class="right d-flex align-items-center " style="padding-left: 27%;">
+                        <div class="btn-group m-1 d-none d-lg-block" >
+                            <button type="button" class="btn btn-flag dropdown-toggle p-1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <img src="./sources/img/mexicoFlag.svg" width="18px" alt="">MX
+                            </button>
+                            <ul class="dropdown-menu btn-drop">
+                                <li><a class="dropdown-item fw-bold" href="#">Ediciones</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#"><img src="./sources/img/ES.svg" class="icon-svg" alt="">ES (España)</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#"><img src="./sources/img/EN.svg" class="icon-svg" alt="">EN (English)</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <a class="dropdown-item active" href="#"><img src="./sources/img/MX.svg" class="icon-svg" alt="">MX (México)</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li><a class="dropdown-item" href="#"><img src="./sources/img/US.svg" class="icon-svg" alt="">US (USA)</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <form action="" class="px-4 py-3">
+                                    <div class="cont-form">
+                                        <p class="fw-bold"><img src="./sources/img/i.svg" class="" alt="">Escoge tu edición de Marca.com<br>favorita</p>
+                                        <p>Siempre que entres en Marca.com<br>se cargará esta edición</p>
+                                        <ul>
+                                            <li>
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                                    <label class="form-check-label" for="flexRadioDefault1">
+                                                        ES (España)
+                                                    </label>
+                                            </li>
+                                            <li>
+                                                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                                    <label class="form-check-label" for="flexRadioDefault1">
+                                                            EN (English)
+                                                    </label>
+                                                </li>
+                                                <li>
+                                                    <input class="form-check-input" checked type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                                    <label class="form-check-label" for="flexRadioDefault1">
+                                                        MX (México)
+                                                    </label>
+                                                </li>
+                                                <li>
+                                                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                                                    <label class="form-check-label" for="flexRadioDefault1">
+                                                        US (USA)
+                                                </label>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </form>
+        
+                            </ul>
+                        </div>
+                        <div class="btn-login m-1 d-none d-lg-block">
+                            <a href="https://seguro.marca.com/registro/v3/?view=login">Iniciar Sesión</a>
+                        </div>
+                    </div>
                 </div>
-            </div> -->
-        <div class="col-6 text-center d-none d-lg-block">
-
+                <div>
+                </div>
+            </div>
         </div>
         </div>
-
     </header>
+    
     <nav class="navbar navbar-expand-lg navbar-dark barra-navegacion sticky-top" style="padding: 0">
         <div class="container">
             <a class="navbar-brand d-lg-none" href="#">
