Fix header and MX botton

--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
                     <div class="right d-flex align-items-center " style="padding-left: 27%;">
                         <div class="btn-group m-1 d-none d-lg-block" >
                             <button type="button" class="btn btn-flag dropdown-toggle p-1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="./sources/img/mexicoFlag.svg" width="18px" alt="">MX
+                                <img src="./img/mexicoFlag.svg" width="18px" alt="">MX
                             </button>
-                            <ul class="dropdown-menu btn-drop">
+                            <ul class="dropdown-menu btn-drop fixed-top">
                                 <li><a class="dropdown-item fw-bold" href="#">Ediciones</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><img src="./sources/img/ES.svg" class="icon-svg" alt="">ES (España)</a></li>
+                                <li><a class="dropdown-item" href="#"><img src="./img/ES.svg" class="icon-svg" alt="">ES (España)</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><img src="./sources/img/EN.svg" class="icon-svg" alt="">EN (English)</a></li>
+                                <li><a class="dropdown-item" href="#"><img src="./img/EN.svg" class="icon-svg" alt="">EN (English)</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <a class="dropdown-item active" href="#"><img src="./sources/img/MX.svg" class="icon-svg" alt="">MX (México)</a></li>
+                                <a class="dropdown-item active" href="#"><img src="./img/MX.svg" class="icon-svg" alt="">MX (México)</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><img src="./sources/img/US.svg" class="icon-svg" alt="">US (USA)</a></li>
+                                <li><a class="dropdown-item" href="#"><img src="./img/US.svg" class="icon-svg" alt="">US (USA)</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <form action="" class="px-4 py-3">
                                     <div class="cont-form">
-                                        <p class="fw-bold"><img src="./sources/img/i.svg" class="" alt="">Escoge tu edición de Marca.com<br>favorita</p>
+                                        <p class="fw-bold"><img src="./img/i.svg" class="" alt="">Escoge tu edición de Marca.com<br>favorita</p>
                                         <p>Siempre que entres en Marca.com<br>se cargará esta edición</p>
                                         <ul>
                                             <li>
@@ -127,44 +127,9 @@
         </div>
         </div>
     </header>
-    
+
     <nav class="navbar navbar-expand-lg navbar-dark barra-navegacion sticky-top" style="padding: 0">
         <div class="container">
-            <a class="navbar-brand d-lg-none" href="#">
-                <img src="./assets/img/svg/Marca-blanco.svg.png" alt="Logo MARCA" class="imagen-con-fondo"
-                    style="width: 150px" />
-            </a>
-            <div class="align-content-end">
-                <a href="#" class="text-decoration-none d-lg-none" title="Radio MARCA">
-                    <img src="./assets/img/svg/1200px-RadioMARCA.svg.png" alt="Logo Radio MARCA" class="img-fluid m-1"
-                        style="width: 2rem" />
-                </a>
-                <div class="btn-group d-lg-none">
-                    <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        <img src="./assets/img/svg/Flag_of_Mexico.png" alt="México" class="img-fluid"
-                            style="width: 20px" />
-                        MX
-                    </button>
-                    <ul class="dropdown-menu p-1">
-                        <strong>Ediciones</strong>
-                        <hr />
-                        <a href="#" class="dropdown-item active">
-                            <img src="./assets/img/svg/Flag_of_Mexico.png" alt="México" class="img-fluid"
-                                style="width: 20px" />
-                            MX (México)
-                        </a>
-                    </ul>
-                </div>
-                <button type="button" class="btn btn-outline-light btn-sm d-lg-none">
-                    Iniciar sesión
-                </button>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
             <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 fs-6">
                     <li class="nav-item dropdown position-static">
@@ -266,6 +231,8 @@
                 </div>
 
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
