Fix MX button, add some references and style

--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
                         <img src="./img/marca_logo_grande.png" alt="Logo lo + trending"
                           class="img-fluid m-1 d-none d-lg-block" style="width: 9rem;" />
                     </div>
-                    <div class="right d-flex align-items-center " style="padding-left: 27%;">
+                    <div class="flow" style="padding-left: 27%;">
                         <div class="btn-group m-1 d-none d-lg-block" >
                             <button type="button" class="btn btn-flag dropdown-toggle p-1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="./img/mexicoFlag.svg" width="18px" alt="">MX
+                                <img src="./img/mexicoFlag.svg" width="18px"  alt=""> MX
                             </button>
                             <ul class="dropdown-menu btn-drop fixed-top">
-                                <li><a class="dropdown-item fw-bold" href="#">Ediciones</a></li>
+                                <li><a class="dropdown-item fw-bold" href="#">EDICIONES</a></li>
+                                <li><hr class="dropdown-divider" style="height: 5px;"></li>
+                                <li><a class="dropdown-item" href="https://www.marca.com/?intcmp=BOTONPORTADA&s_kw=portada&ue_guest"><img src="./img/ES.svg"  alt="">ES (España)</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><img src="./img/ES.svg" class="icon-svg" alt="">ES (España)</a></li>
+                                <li><a class="dropdown-item" href="https://www.marca.com/en/?intcmp=BOTONPORTADA&s_kw=portada"><img src="./img/EN.svg" alt="">EN (English)</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><img src="./img/EN.svg" class="icon-svg" alt="">EN (English)</a></li>
+                                <a class="dropdown-item active" href="https://www.marca.com/mx/?intcmp=BOTONPORTADA&s_kw=portada"><img src="./img/MX.svg" alt="">MX (México)</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <a class="dropdown-item active" href="#"><img src="./img/MX.svg" class="icon-svg" alt="">MX (México)</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="#"><img src="./img/US.svg" class="icon-svg" alt="">US (USA)</a></li>
+                                <li><a class="dropdown-item" href="https://us.marca.com/?intcmp=BOTONPORTADA&s_kw=portada"><img src="./img/US.svg" alt="">US (USA)</a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <form action="" class="px-4 py-3">
                                     <div class="cont-form">
-                                        <p class="fw-bold"><img src="./img/i.svg" class="" alt="">Escoge tu edición de Marca.com<br>favorita</p>
+                                        <p class="fw-bold"><img src="./img/i.svg"  alt="">Escoge tu edición de Marca.com favorita</p>
                                         <p>Siempre que entres en Marca.com<br>se cargará esta edición</p>
                                         <ul>
                                             <li>
@@ -229,6 +229,12 @@
                         </a>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div>
+            
+        </div>
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
