--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <br>
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12" style="padding: 0% 16% 0% 16%;">
                     <table class="table table-bordered table-secondary">
                         <tbody>
                             <tr>
@@ -514,6 +514,38 @@
                 </div>
 
     </main>
+    <!-- Footer -->
+ 
+  <footer class="bg-light text-dark pt-5 pb-4">
+    
+
+    <br>
+    <section class="footer-derechos">
+
+      <div class="row text-center fw-bold">
+        <p>© Septiembre 2023 Unidad Editorial Información Deportiva, S.L.U. Todos los derechos reservados.</p>
+      </div>
+
+      <div class="row text-center terminos">
+        <span><p>Política de cookies          Configuración de cookies        Política de privacidad       Términos y condiciones de uso      Certificado por OJD      Contacto       Publicidad   <br>  
+      Ayudas</p></span>
+      </div>
+
+      <br>
+
+      <div>
+        <p class="fw-bold text-center"> Siguenos en </p>
+      </div>
+
+      <div class="text-center">
+        <img class="img-footer" src="img/facebook.png" alt="facebook">
+        <img class="img-footer" src="img/gorjeo.png" alt="twitter">
+        <img class="img-footer" src="img/rss.png" alt="wifi">
+      </div>
+
+    </section>
+
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
