--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="col-md-12">
                 <div style="padding: 0% 11% 0% 11%;" class="mt-1 mb-1 list-group list-group-horizontal">
                     <div class=" d-flex align-items-center fw-bold text me-3" style="font-size: 11px;">
-                        <img src="./img/radiomarca.png" alt="Logo Radio MARCA" class="img-fluid m-1 d-none d-lg-block"
+                        <img src="img/radioMarca.png" alt="Logo Radio MARCA" class="img-fluid m-1 d-none d-lg-block"
                             style="width: 1.9rem;" />
                         <span class="d-none d-lg-block">Radio MARCA</span>
                     </div>
